<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">HHelper</string>
    <string name="course">Course</string>
    <string name="information">Information</string>
    <string name="contacts">Contacts</string>
    <string name="addMaterials">Add materials</string>
    <string name="deleteMaterials">Delete materials</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="night_mode">Night mode</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign out</string>
    <string name="administration_tools">Administration tools</string>
    <string name="open_content_manager">Open Content Manager</string>
    <string name="additional_literature">Additional Literature</string>
    <string name="useful_links">Useful Links</string>
    <string name="schedule">Schedule</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>